--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -4,11 +4,11 @@ if(${ARCHITECTURE} STREQUAL "X86")
     add_project("x86")
     abstraction_add_sources(x86-idt)
     if(${ENVIRONMENT} STREQUAL "FREESTANDING")
-        abstraction_add_sources(x86-idt-real)
+        abstraction_add_sources(x86-idt)
     elseif(${ENVIRONMENT} STREQUAL "EFI")
-        abstraction_add_sources(x86-idt-real)
+        abstraction_add_sources(x86-idt)
     elseif(${ENVIRONMENT} STREQUAL "POSIX")
-        message(FATAL_ERROR "No implementation of interrupts idt in posix")
+        abstraction_add_sources(x86-idt)
     else()
         message(FATAL_ERROR "Could not match ENVIRONMENT variable")
     endif()
