--- a/projects/shared/code/memory/management/CMakeLists.txt
+++ b/projects/shared/code/memory/management/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(shared-memory-management LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/management.c")
+add_library(${PROJECT_NAME} OBJECT "src/management.c" "src/page.c")
 
 add_includes_for_sublibrary()
 
