--- a/projects/shared/code/memory/management/CMakeLists.txt
+++ b/projects/shared/code/memory/management/CMakeLists.txt
@@ -9,5 +9,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
 add_subdirectory(status)
